<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="10dp"
              android:gravity="center_vertical"
              android:baselineAligned="false">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|center_vertical">

        <ImageView
                android:id="@+id/app_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon"
                android:contentDescription="@string/appicon"
                android:layout_marginEnd="8dp" /> <!-- Ajout d'une marge à droite pour l'espace entre l'icône et le texte -->

        <!-- Titre de la notification -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_NBWorkout"
                android:textSize="11sp"
                android:layout_marginStart="8dp"
                android:textColor="#FFFFFF"/>
    </LinearLayout>
    <!-- Conteneur pour l'icône de sablier et le compte à rebours -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center|center_vertical">

        <!-- Icône de sablier -->
        <ImageView
                android:id="@+id/notification_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/hourglass"
                android:contentDescription="@string/sablier"
                android:layout_marginEnd="8dp"/> <!-- Ajout d'une marge à droite pour l'espace entre l'icône et le texte -->

        <!-- Titre de la notification -->
        <!-- Texte blanc -->

        <!-- Compte à rebours -->
        <TextView
                android:id="@+id/notification_countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00_00"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                android:textColor="#FFFFFF"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|end">

            <!-- Bouton +10 sec -->

            <!-- Bouton Annuler -->
            <Button
                    android:id="@+id/button_add_10_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_sec"
                    android:layout_marginEnd="8dp"
                    android:textColor="#FFFFFF"
                    style="?android:attr/buttonBarButtonStyle"/>
            <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/annuler"
                    android:textColor="#FFFFFF"
                    style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
        <!-- Texte blanc -->
    </LinearLayout>

    <!-- Conteneur pour les boutons -->
</LinearLayout>
